--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="card-container">
+    <!-- <div class="card-container">
         <div class="top-card-section">
             <div class="premium-container">
                 <p>Premium</p>
@@ -40,7 +40,9 @@
                 <button>Connect Wallet</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
+
+    <script src="./index.js"></script>
 </body>
 </html>
